<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/global_background"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:weightSum="100"
    android:layout_height="match_parent"
    tools:context=".IdentActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:textSize="50sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/background_color_light"
        android:text="@string/login_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:background="@drawable/login_background"
        android:foregroundGravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginHorizontal="45dp"
            android:fontFamily="@font/roboto_light"
            android:layout_marginTop="90dp"
            android:background="@drawable/normal_input"
            android:drawableEnd="@drawable/account_input_icon"
            android:elevation="5dp"
            android:hint="@string/login_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            android:textCursorDrawable="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:textCursorDrawable="@null"
            android:layout_marginHorizontal="45dp"
            android:fontFamily="@font/roboto_light"
            android:layout_marginTop="68dp"
            android:background="@drawable/normal_input"
            android:drawableEnd="@drawable/locker_icon"
            android:elevation="5dp"
            android:ems="10"
            android:hint="@string/password_button"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_text" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_marginHorizontal="@dimen/average_margin"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text"
            app:layout_constraintVertical_bias="0.5">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="237dp"
                android:layout_height="70dp"
                android:layout_marginBottom="@dimen/medium_margin"
                android:background="@drawable/normal_button"
                android:drawableEnd="@drawable/login_button_icon"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:paddingEnd="@dimen/medium_margin"
                android:text="@string/login_button"
                android:textColor="@color/background_color_light"
                android:textSize="@dimen/large_font_size"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/call_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@drawable/unable_button"
                android:drawableEnd="@drawable/phone_icon"
                android:fontFamily="@font/roboto_thin"
                android:gravity="center"
                android:paddingEnd="@dimen/medium_font_size"
                android:text="@string/call_button"
                android:textColor="@color/background_color_light"
                tools:ignore="RtlSymmetry" />


        </LinearLayout>

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="go to register"
            android:textColor="?attr/borderColor"
            android:fontFamily="@font/roboto_light"
            android:textSize="@dimen/medium_font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>