<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/global_background"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:weightSum="100"
    android:layout_height="match_parent"
    tools:context=".IdentActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="15"
        android:weightSum="100"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_weight="30"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_arrow"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/background_color_light"
                android:text="@string/register_button" />

        </LinearLayout>



    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="85"
        android:background="@drawable/login_background"
        android:foregroundGravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginHorizontal="45dp"
            android:layout_marginTop="106dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/normal_input"
            android:drawableEnd="@drawable/account_input_icon"
            android:elevation="5dp"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/login_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textCursorDrawable="@null"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/password_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password_text2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginHorizontal="45dp"
            android:layout_marginBottom="52dp"
            android:background="@drawable/normal_input"
            android:drawableEnd="@drawable/locker_icon"
            android:elevation="5dp"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/confirm_password_button"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textCursorDrawable="@null"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginHorizontal="45dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/normal_input"
            android:drawableEnd="@drawable/locker_icon"
            android:elevation="5dp"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/password_button"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textCursorDrawable="@null"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/password_text2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="390dp"
            android:layout_height="121dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="36dp"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_button"
                android:layout_width="237dp"
                android:layout_height="70dp"
                android:background="@drawable/normal_button"
                android:drawableEnd="@drawable/login_button_icon"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:paddingEnd="@dimen/medium_margin"
                android:text="@string/register_button"
                android:textColor="@color/background_color_light"
                android:textSize="@dimen/large_font_size"

                tools:ignore="RtlSymmetry" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>